# opensourceUI

./: README.MD
cargo/: libminigui_procs-3.2.so.0.0.0
minigui_dev_kit/: MiniGui 开发包指引.doc
minigui_dev_kit/doc/: MiniGUI特性说明书(精).doc  MiniGUI编程指南.txt  第21章-MiniGUI图形界面设计.ppt
minigui_dev_kit/gui/: config.sh  makefile
minigui_dev_kit/gui/src/Chipmunk2D/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conf.sh  install_manifest.txt
minigui_dev_kit/gui/src/Chipmunk2D/demo/: CMakeLists.txt  Makefile  cmake_install.cmake
minigui_dev_kit/gui/src/Chipmunk2D/src/: Makefile  cmake_install.cmake  cpSpaceComponent.c
minigui_dev_kit/gui/src/freetype/: conf.sh
minigui_dev_kit/gui/src/helloworld/: RM68200_720x1280.h  conf.sh  helloworld  helloworld.c  hscrollview.rc  iconflow  makefile  mginit  mginit.c  rtsp.sh  sstardisp.c  sstardisp.h
minigui_dev_kit/gui/src/helloworld/res/: Makefile  Makefile.in
minigui_dev_kit/gui/src/jpeg/: Makefile  conf.sh  config.status  libtool
minigui_dev_kit/gui/src/jpeg/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
minigui_dev_kit/gui/src/libmgeff/: Makefile  Makefile.in  aclocal.m4  conf.sh  config.status  configure  libtool  mgeff.pc  stamp-h1
minigui_dev_kit/gui/src/libmgeff/include/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgeff/m4/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgeff/src/: Makefile  Makefile.in  animation.c
minigui_dev_kit/gui/src/libmgi/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  conf.sh  configure  configure.in  mgiconfig.h.in
minigui_dev_kit/gui/src/libmgi/examples/: Makefile.in  hwtest.c  mgphone_edit.c  skb_demo.c  sktest.c  switchtest.c
minigui_dev_kit/gui/src/libmgi/include/: Makefile.in
minigui_dev_kit/gui/src/libmgi/m4/: Makefile.in
minigui_dev_kit/gui/src/libmgi/src/: Makefile.in  hw_engine.c  hwinput.c
minigui_dev_kit/gui/src/libmgi/src/softkeyboard/: Makefile.in  softkeywindow.c
minigui_dev_kit/gui/src/libmgi/src/softkeyboard/animate/: p-code.c
minigui_dev_kit/gui/src/libmgi/src/softkeyboard/softkeyboard/: Makefile.in  common.c  en_kbd.c  pinyin_kbd.c
minigui_dev_kit/gui/src/libmgi/src/softkeyboard/softkeyboard/240-320/: Makefile.in
minigui_dev_kit/gui/src/libmgi/src/softkeyboard/softkeyboard/320-240/: Makefile.in
minigui_dev_kit/gui/src/libmgi/src/softkeyboard/softkeyboard/480-272/: Makefile.in
minigui_dev_kit/gui/src/libmgncs/: Makefile  Makefile.in  conf.sh  config.status  configure  libtool  mgncsconfig.h.in
minigui_dev_kit/gui/src/libmgncs/etc/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgncs/include/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgncs/src/: Makefile  Makefile.in  mcolorbutton.c  mmonthcalendar.c  mwidget.c
minigui_dev_kit/gui/src/libmgncs4touch/: Makefile  Makefile.in  aclocal.m4  conf.sh  config.status  configure  configure.ac  libtool  mgncs4touchconfig.h  mgncs4touchconfig.h.in  stamp-h1
minigui_dev_kit/gui/src/libmgncs4touch/etc/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgncs4touch/include/: Makefile
minigui_dev_kit/gui/src/libmgncs4touch/m4/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgncs4touch/plugin/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgncs4touch/samples/: Makefile  Makefile.in  balloontip.c  btnnavbar.c  comm_draw.c  datepicker.c  exlist.c  hscrollview.c  iconflow.c  imgnavbar.c  itembar.c  newtrackbar.c  picker.c  settingtableview.c  switchbutton.c  tableview.c  timepicker.c
minigui_dev_kit/gui/src/libmgncs4touch/src/: Makefile  Makefile.in  mgncs4touch.c  miconflow.c
minigui_dev_kit/gui/src/libmgplus/: Makefile  Makefile.in  conf.sh  config.status  configure  libtool  mgplus.pc  mgplusconfig.h.in  stamp-h1
minigui_dev_kit/gui/src/libmgplus/autom4te.cache/: output.0  requests  traces.0  traces.1
minigui_dev_kit/gui/src/libmgplus/cmake/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgplus/include/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgplus/m4/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgplus/src/: Makefile  Makefile.in
minigui_dev_kit/gui/src/libmgutils/: Makefile  Makefile.in  conf.sh  config.status  configure  libtool  mgutils.pc  mgutilsconfig.h.in  stamp-h1
minigui_dev_kit/gui/src/libpng/: 2  Makefile  Makefile.in  conf.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
minigui_dev_kit/gui/src/mg-samples/: 2  Makefile  Makefile.in  conf.sh  config.status  configure
minigui_dev_kit/gui/src/minigui/: CMakeLists.txt  Makefile  Makefile.in  conf.sh  config.status  configure  configure.ac  libtool  mgconfig.h  mgconfig.h.in
minigui_dev_kit/gui/src/minigui-res/: Makefile  Makefile.in  conf.sh  config.status  configure
minigui_dev_kit/gui/src/minigui/src/ial/native/: Makefile  Makefile.am  Makefile.in  kbd_event.c  mou_imps2.c  native.c  native.h  touchscreen.c  tslib.c  ugpi_input.c  ugpi_input.h  uhid_input.c  uhid_input.h
minigui_dev_kit/gui/src/minigui/src/ial/native/.deps/: kbd_event.Plo  kbd_tty.Plo  mou_gpm.Plo  mou_imps2.Plo  mou_ms.Plo  mou_ms3.Plo  mou_ps2.Plo  native.Plo  touchscreen.Plo  vtswitch-lite.Plo
minigui_dev_kit/gui/src/minigui/src/newgal/sstar/: Makefile  Makefile.am  Makefile.in  fbsstar.c  fbsstar.h  fbsstaraccel.c  fbsstaraccel.h  fbsstaraccel_dma.c  fbsstaraccel_dma.h  fbsstaraccel_gfx.c  fbsstaraccel_gfx.h
minigui_dev_kit/gui/src/tslib/: Makefile  Makefile.in  aclocal.m4  conf.sh  config.h  config.h.in  config.status  configure  libtool  tslib.pc
minigui_dev_kit/gui/src/zlib/: Makefile  conf.sh
zlib/: Makefile  conf.sh  zlib.pc
(+1202 files in other folders)
